Navbar made visible on desktop after a previous bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,12 +487,12 @@ input[type=submit]:hover {
     align-items: center;
   }
 
-  /* .main-nav {
+  .main-nav {
     display: flex;
     margin-right: 30px;
     flex-direction: row;
     justify-content: flex-end;
-  } */
+  }
 
   .main-nav li {
     margin: 0;
